fixing code block word wrap

--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,7 @@ pre {
   padding: 1em;
   margin: .5em 0;
   background-color: #f6f6f6;
+  overflow-wrap: break-word;
 }
 
 img.book-image, img.post-image {
